v2.14.3 - xx xxx xxxx
---------------------
   - DPDK:
     * OVS validated with DPDK 19.11.8. It is recommended to use this version
       until further releases.
   - ovs-ctl:
     * New option '--no-record-hostname' to disable hostname configuration
       in ovsdb on startup.
     * New command 'record-hostname-if-not-set' to update hostname in ovsdb.

v2.14.2 - 10 Feb 2021
---------------------
   - Bug fixes
   - Security:
     * Fixed packet parsing vulnerability CVE-2020-35498.

v2.14.1 - 13 Jan 2021
---------------------
   - Bug fixes
   - LLDP:
     * Security fixes for CVE-2015-8011 and CVE-2020-27827.
   - IPsec:
     * Fixed support of strongswan 5.7+ in ovs-monitor-ipsec.
     * Add option '--no-cleanup' to allow ovs-monitor-ipsec to stop without
       tearing down IPsec tunnels.
     * Add option '--no-restart-ike-daemon' to allow ovs-monitor-ipsec to start
       without restarting ipsec daemon.
   - OVSDB:
     * New unixctl command 'ovsdb-server/memory-trim-on-compaction on|off'.
       If turned on, ovsdb-server will try to reclaim all the unused memory
       after every DB compaction back to OS.  Disabled by default.
     * Maximum backlog on RAFT connections limited to 500 messages or 4GB.
       Once threshold reached, connection is dropped (and re-established).
       Use the 'cluster/set-backlog-threshold' command to change limits.
     * Fixed SHA-1 hash computation for databases larger than 512 MB.
   - DPDK:
     * Fixed support of 'net_virtio' devices.

v2.14.0 - 17 Aug 2020
---------------------
   - ovs-vswitchd no longer deletes datapath flows on exit by default.
   - OpenFlow:
     * The OpenFlow ofp_desc/serial_num may now be configured by setting the
       value of other-config:dp-sn in the Bridge table.
     * Added support to watch CONTROLLER port status in fast failover group.
     * New action "delete_field".
   - DPDK:
     * Deprecated DPDK pdump packet capture support removed.